--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   },
   "dependencies": {
     "express": "^4.17.2",
+    "firebase": "^9.6.1",
+    "firebase-admin": "^10.0.1",
     "joi": "^17.5.0",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
